--- a/_posts/2018-11-5-go-get.md
+++ b/_posts/2018-11-5-go-get.md
@@ -19,16 +19,16 @@ tags: [sockt5, go get, polipo, mac]
 
 #### 启动 ####
 
-1. 方法1
+##### 方法1
 > polipo socksParentProxy=127.0.0.1:1080
 
-2. 方法2
+##### 方法2
 
-- 设置登录启动
+设置登录启动
 
 > ln -sfv /usr/local/opt/polipo/*.plist ~/Library/LaunchAgents
 
-- 编辑 `/usr/local/opt/polipo/homebrew.mxcl.polipo.plist`
+编辑 `/usr/local/opt/polipo/homebrew.mxcl.polipo.plist`
 
 ``` xml
 <?xml version="1.0" encoding="UTF-8"?>
